# LLMOPS

./: .env  Dockerfile  Procfile  buildspec.yml  ecs-taskdef.json  fastapi_phoenix_agent.py  input_examples.txt  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci..yml  ci.yml  task_defination.json
.ipynb_checkpoints/: Chapter_1_Evaluating_LLM_Agents-checkpoint.ipynb  Chapter_2_Evaluating_LLM_Agents-checkpoint.ipynb  Chapter_3_Evaluating_LLM_Agents-checkpoint.ipynb  Chapter_4_Evaluating_LLM_Agents-checkpoint.ipynb
Notebooks/: Chapter_2_Evaluating_LLM_Agents.ipynb  Chapter_3_Evaluating_LLM_Agents.ipynb  Chapter_4_Evaluating_LLM_Agents.ipynb  Guardrails.ipynb
Notebooks/.ipynb_checkpoints/: Chapter_1_Evaluating_LLM_Agents-checkpoint.ipynb  Guardrails-checkpoint.ipynb
tests/: conftest.py  test_agent_run.py  test_analyze.py  test_lookup.py  test_root.py  test_visualize.py
